apps/routers/howto-kubeconfig/howto-kubeconfig-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: howto-kubeconfig
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`howto.howard.moomboo.space`)
    services:
    - kind: Service
      name: howto-kubeconfig
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: howto-kubeconfig
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`howto.howard.moomboo.space`)
    services:
    - name: howto-kubeconfig
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
